# snowflake-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: globals.h  main.cpp
src/Armor.abstract/: Armor.cpp  Armor.h
src/Armor.abstract/Chestplate.class/: Chestplate.cpp  Chestplate.h
src/Armor.abstract/Helmet.class/: Helmet.cpp  Helmet.h
src/Armor.abstract/Leggings.class/: Leggings.cpp  Leggings.h
src/ArmorSet.class/: ArmorSet.cpp  ArmorSet.h
src/Enemy.class/: Enemy.cpp  Enemy.h
src/Exceptions/: InventoryFullException.h  LoggerNotInitialized.h  SlotAlreadyOccupiedException.h  SlotEmptyException.h  WeaponSlotEmptyException.h  WrongItemTypeException.h
src/FightSystem/Event.class/: Event.cpp  Event.h
src/FightSystem/FightScene.class/: FightScene.cpp  FightScene.h  PlayerAction.h
src/FightSystem/FightScene.class/PlayerActions/: Attack.cpp  Attack.h  Equip.cpp  Equip.h
src/GameObject.abstract/: GameObject.h
src/GameScene.class/: GameScene.cpp  GameScene.h
src/Gui.class/: Gui.cpp  Gui.h
src/Item.class/: Item.cpp  Item.h
src/Item.class/Consumable.abstract/: Consumable.h
src/Item.class/Consumable.abstract/HealingConsumable.class/: HealingConsumable.cpp  HealingConsumable.h
src/Item.class/Food.class/: Food.cpp  Food.h
src/Logger.class/: Logger.cpp  Logger.h
src/Player.class/: Player.cpp  Player.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Renderer.class/: Renderer.cpp  Renderer.h
src/Renderer/GameScene.class/: GameScene.h
src/Renderer/Gui.class/: Gui.cpp  Gui.h
src/Renderer/Scene.class/: Scene.cpp  Scene.h
src/Renderer/UI/Button.class/: Button.cpp  Button.h
src/Renderer/UI/InteractableUIElement.abstract/: InteractableUIElement.cpp  InteractableUIElement.h
src/Renderer/UI/InteractiveUIElement.abstract/: InteractiveUIElement.cpp  InteractiveUIElement.h
src/Renderer/UI/UIElement.abstract/: UIElement.cpp  UIElement.h
src/Renderer/UIElement.class/: UIElement.cpp  UIElement.h
src/Sprite.class/: Sprite.cpp  Sprite.h
src/Weapon.abstract/: Weapon.cpp  Weapon.h
src/Weapon.abstract/Bow.class/: Bow.cpp  Bow.h
src/Weapon.abstract/Sword.class/: Sword.cpp  Sword.h
src/Weapon.abstract/Wand.class/: Wand.cpp  Wand.h
src/Window.class/: Window.cpp  Window.h
